model trainer updated adding random forest

--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "bb303cfb",
    "metadata": {},
    "outputs": [],
@@ -79,14 +79,14 @@
     "    train_data_path: Path\n",
     "    test_data_path: Path\n",
     "    model_name: str\n",
-    "    alpha: float\n",
-    "    l1_ratio: float\n",
+    "    n_estimators: int\n",
+    "    max_depth: int\n",
     "    target_column: str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "7500c6e8",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "d17cf8b0",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
     "\n",
     "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
     "        config = self.config.model_trainer\n",
-    "        params = self.params.ElasticNet\n",
+    "        params = self.params.RandomForest\n",
     "        schema =  self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
@@ -128,8 +128,8 @@
     "            train_data_path = config.train_data_path,\n",
     "            test_data_path = config.test_data_path,\n",
     "            model_name = config.model_name,\n",
-    "            alpha = params.alpha,\n",
-    "            l1_ratio = params.l1_ratio,\n",
+    "            n_estimators = params.n_estimators,\n",
+    "            max_depth = params.max_depth,\n",
     "            target_column = schema.name\n",
     "            \n",
     "        )\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "83e8efdc",
    "metadata": {},
    "outputs": [],
@@ -147,13 +147,14 @@
     "import pandas as pd\n",
     "import os\n",
     "from mlProject import logger\n",
-    "from sklearn.linear_model import ElasticNet\n",
-    "import joblib"
+    "import joblib\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "eb273737",
    "metadata": {},
    "outputs": [],
@@ -162,28 +163,50 @@
     "    def __init__(self, config: ModelTrainerConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    \n",
     "    def train(self):\n",
+    "        # 1️⃣ Charger les données\n",
     "        train_data = pd.read_csv(self.config.train_data_path)\n",
     "        test_data = pd.read_csv(self.config.test_data_path)\n",
     "\n",
+    "        # 2️⃣ Séparer X / y\n",
+    "        X_train = train_data.drop([self.config.target_column], axis=1)\n",
+    "        y_train = train_data[self.config.target_column]\n",
     "\n",
-    "        train_x = train_data.drop([self.config.target_column], axis=1)\n",
-    "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
-    "        train_y = train_data[[self.config.target_column]]\n",
-    "        test_y = test_data[[self.config.target_column]]\n",
+    "        X_test = test_data.drop([self.config.target_column], axis=1)\n",
+    "        y_test = test_data[self.config.target_column]\n",
     "\n",
+    "        # 3️⃣ Appliquer SMOTE uniquement sur le train\n",
+    "        smote = SMOTE(random_state=42)\n",
+    "        X_train_res, y_train_res = smote.fit_resample(X_train, y_train)\n",
     "\n",
-    "        lr = ElasticNet(alpha=self.config.alpha, l1_ratio=self.config.l1_ratio, random_state=42)\n",
-    "        lr.fit(train_x, train_y)\n",
+    "        logger.info(\"Target distribution AFTER SMOTE:\")\n",
+    "        logger.info(pd.Series(y_train_res).value_counts().to_string())\n",
     "\n",
-    "        joblib.dump(lr, os.path.join(self.config.root_dir, self.config.model_name))\n",
-    "\n"
+    "        logger.info(f\"Train before SMOTE: {X_train.shape}\")\n",
+    "        logger.info(f\"Train after SMOTE: {X_train_res.shape}\")\n",
+    "\n",
+    "        # 4️⃣ Entraîner RandomForest\n",
+    "        model = RandomForestClassifier(\n",
+    "            n_estimators=self.config.n_estimators,\n",
+    "            max_depth=self.config.max_depth,\n",
+    "            random_state=42,\n",
+    "            n_jobs=-1\n",
+    "        )\n",
+    "\n",
+    "        model.fit(X_train_res, y_train_res)\n",
+    "\n",
+    "        # 5️⃣ Sauvegarde du modèle\n",
+    "        os.makedirs(self.config.root_dir, exist_ok=True)\n",
+    "        model_path = os.path.join(self.config.root_dir, self.config.model_name)\n",
+    "\n",
+    "        joblib.dump(model, model_path)\n",
+    "\n",
+    "        logger.info(f\"RandomForest model saved at {model_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "a0230cf6",
    "metadata": {},
    "outputs": [
@@ -191,11 +214,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-12 19:16:00,017: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-12 19:16:00,020: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-12 19:16:00,021: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-12 19:16:00,022: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-12 19:16:00,023: INFO: common: created directory at: artifacts/model_trainer]\n"
+      "[2025-12-20 13:12:28,032: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-20 13:12:28,040: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-20 13:12:28,044: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-20 13:12:28,046: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-20 13:12:28,047: INFO: common: created directory at: artifacts/model_trainer]\n",
+      "[2025-12-20 13:12:29,948: INFO: 2849920993: Target distribution AFTER SMOTE:]\n",
+      "[2025-12-20 13:12:29,981: INFO: 2849920993: RainTomorrow\n",
+      "0    88218\n",
+      "1    88218]\n",
+      "[2025-12-20 13:12:29,981: INFO: 2849920993: Train before SMOTE: (113754, 107)]\n",
+      "[2025-12-20 13:12:29,981: INFO: 2849920993: Train after SMOTE: (176436, 107)]\n",
+      "[2025-12-20 13:12:39,663: INFO: 2849920993: RandomForest model saved at artifacts/model_trainer\\model.joblib]\n"
      ]
     }
    ],
