adding more models

--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 69,
    "id": "162b18fe",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "id": "034b7588",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject\\\\research'"
+       "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,27 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "id": "77f70ff9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
+    "os.chdir(\"C:/Users/User/Desktop/3-IDSD/mlops/MLOPS/MlopsProject\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "id": "c084c39c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
+       "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "id": "bb303cfb",
    "metadata": {},
    "outputs": [],
@@ -72,21 +72,19 @@
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
-    "\n",
     "@dataclass(frozen=True)\n",
     "class ModelTrainerConfig:\n",
     "    root_dir: Path\n",
     "    train_data_path: Path\n",
     "    test_data_path: Path\n",
     "    model_name: str\n",
-    "    n_estimators: int\n",
-    "    max_depth: int\n",
-    "    target_column: str"
+    "    target_column: str\n",
+    "    all_params: dict  # contient les params de tous les modèles\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 74,
    "id": "7500c6e8",
    "metadata": {},
    "outputs": [],
@@ -97,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 75,
    "id": "d17cf8b0",
    "metadata": {},
    "outputs": [],
@@ -118,50 +116,59 @@
     "\n",
     "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
     "        config = self.config.model_trainer\n",
-    "        params = self.params.RandomForest\n",
-    "        schema =  self.schema.TARGET_COLUMN\n",
+    "        params = self.params  # contient RandomForest, XGBoost, LightGBM, CatBoost\n",
+    "        schema = self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
     "\n",
     "        model_trainer_config = ModelTrainerConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            train_data_path = config.train_data_path,\n",
-    "            test_data_path = config.test_data_path,\n",
-    "            model_name = config.model_name,\n",
-    "            n_estimators = params.n_estimators,\n",
-    "            max_depth = params.max_depth,\n",
-    "            target_column = schema.name\n",
-    "            \n",
+    "            train_data_path=config.train_data_path,\n",
+    "            test_data_path=config.test_data_path,\n",
+    "            model_name=config.model_name,\n",
+    "            target_column=schema.name,\n",
+    "            all_params=params  # stocke tous les params\n",
     "        )\n",
     "\n",
-    "        return model_trainer_config"
+    "        return model_trainer_config\n",
+    "    \n",
+    "    def get_all_model_params(self) -> dict:\n",
+    "        return self.params  # si self.params contient le YAML complet avec RandomForest, XGBoost…\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 76,
    "id": "83e8efdc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "from mlProject import logger\n",
     "import joblib\n",
+    "from mlProject import logger\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "\n",
+    "# Modèles\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from catboost import CatBoostClassifier\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "eb273737",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ModelTrainer:\n",
-    "    def __init__(self, config: ModelTrainerConfig):\n",
+    "    def __init__(self, config: ModelTrainerConfig, all_params: dict):\n",
     "        self.config = config\n",
+    "        self.all_params = all_params  # dictionnaire contenant les hyperparamètres pour chaque modèle\n",
     "\n",
     "    def train(self):\n",
     "        # 1️⃣ Charger les données\n",
@@ -181,32 +188,45 @@
     "\n",
     "        logger.info(\"Target distribution AFTER SMOTE:\")\n",
     "        logger.info(pd.Series(y_train_res).value_counts().to_string())\n",
-    "\n",
     "        logger.info(f\"Train before SMOTE: {X_train.shape}\")\n",
     "        logger.info(f\"Train after SMOTE: {X_train_res.shape}\")\n",
     "\n",
-    "        # 4️⃣ Entraîner RandomForest\n",
-    "        model = RandomForestClassifier(\n",
-    "            n_estimators=self.config.n_estimators,\n",
-    "            max_depth=self.config.max_depth,\n",
-    "            random_state=42,\n",
-    "            n_jobs=-1\n",
-    "        )\n",
+    "        # 4️⃣ Définir tous les modèles avec leurs paramètres depuis all_params\n",
+    "        baseline_models = {\n",
+    "            'RandomForest': RandomForestClassifier(\n",
+    "                **self.all_params.get('RandomForest', {}),\n",
+    "                random_state=42,\n",
+    "                n_jobs=-1\n",
+    "            ),\n",
+    "            'XGBoost': XGBClassifier(\n",
+    "                **self.all_params.get('XGBoost', {}),\n",
+    "                random_state=42,\n",
+    "                eval_metric='logloss'\n",
+    "            ),\n",
+    "            'LightGBM': LGBMClassifier(\n",
+    "                **self.all_params.get('LightGBM', {}),\n",
+    "                random_state=42\n",
+    "            ),\n",
+    "            'CatBoost': CatBoostClassifier(\n",
+    "                **self.all_params.get('CatBoost', {}),\n",
+    "                random_seed=42,\n",
+    "                verbose=0\n",
+    "            )\n",
+    "        }\n",
     "\n",
-    "        model.fit(X_train_res, y_train_res)\n",
-    "\n",
-    "        # 5️⃣ Sauvegarde du modèle\n",
+    "        # 5️⃣ Boucler sur tous les modèles pour entraîner et sauvegarder\n",
     "        os.makedirs(self.config.root_dir, exist_ok=True)\n",
-    "        model_path = os.path.join(self.config.root_dir, self.config.model_name)\n",
-    "\n",
-    "        joblib.dump(model, model_path)\n",
-    "\n",
-    "        logger.info(f\"RandomForest model saved at {model_path}\")\n"
+    "        for name, model in baseline_models.items():\n",
+    "            logger.info(f\"Training {name}...\")\n",
+    "            model.fit(X_train_res, y_train_res)\n",
+    "            model_path = os.path.join(self.config.root_dir, f\"{name}.pkl\")\n",
+    "            joblib.dump(model, model_path)\n",
+    "            logger.info(f\"{name} saved at {model_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "id": "a0230cf6",
    "metadata": {},
    "outputs": [
@@ -214,29 +234,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-20 13:12:28,032: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-20 13:12:28,040: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-20 13:12:28,044: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-20 13:12:28,046: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-20 13:12:28,047: INFO: common: created directory at: artifacts/model_trainer]\n",
-      "[2025-12-20 13:12:29,948: INFO: 2849920993: Target distribution AFTER SMOTE:]\n",
-      "[2025-12-20 13:12:29,981: INFO: 2849920993: RainTomorrow\n",
+      "[2025-12-20 14:39:55,395: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-20 14:39:55,397: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-20 14:39:55,398: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-20 14:39:55,398: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-20 14:39:55,398: INFO: common: created directory at: artifacts/model_trainer]\n",
+      "[2025-12-20 14:39:57,038: INFO: 405343348: Target distribution AFTER SMOTE:]\n",
+      "[2025-12-20 14:39:57,045: INFO: 405343348: RainTomorrow\n",
       "0    88218\n",
       "1    88218]\n",
-      "[2025-12-20 13:12:29,981: INFO: 2849920993: Train before SMOTE: (113754, 107)]\n",
-      "[2025-12-20 13:12:29,981: INFO: 2849920993: Train after SMOTE: (176436, 107)]\n",
-      "[2025-12-20 13:12:39,663: INFO: 2849920993: RandomForest model saved at artifacts/model_trainer\\model.joblib]\n"
+      "[2025-12-20 14:39:57,046: INFO: 405343348: Train before SMOTE: (113754, 107)]\n",
+      "[2025-12-20 14:39:57,046: INFO: 405343348: Train after SMOTE: (176436, 107)]\n",
+      "[2025-12-20 14:39:57,049: INFO: 405343348: Training RandomForest...]\n",
+      "[2025-12-20 14:40:06,919: INFO: 405343348: RandomForest saved at artifacts/model_trainer\\RandomForest.pkl]\n",
+      "[2025-12-20 14:40:06,920: INFO: 405343348: Training XGBoost...]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Desktop\\3-IDSD\\mlops\\MLOPS\\MlopsProject\\base\\Lib\\site-packages\\xgboost\\training.py:199: UserWarning: [14:40:08] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-12-20 14:40:09,447: INFO: 405343348: XGBoost saved at artifacts/model_trainer\\XGBoost.pkl]\n",
+      "[2025-12-20 14:40:09,447: INFO: 405343348: Training LightGBM...]\n",
+      "[LightGBM] [Info] Number of positive: 88218, number of negative: 88218\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.012249 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Total Bins 3483\n",
+      "[LightGBM] [Info] Number of data points in the train set: 176436, number of used features: 107\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.500000 -> initscore=0.000000\n",
+      "[2025-12-20 14:40:12,488: INFO: 405343348: LightGBM saved at artifacts/model_trainer\\LightGBM.pkl]\n",
+      "[2025-12-20 14:40:12,489: INFO: 405343348: Training CatBoost...]\n",
+      "[2025-12-20 14:40:15,576: INFO: 405343348: CatBoost saved at artifacts/model_trainer\\CatBoost.pkl]\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    model_trainer_config = config.get_model_trainer_config()\n",
-    "    model_trainer_config = ModelTrainer(config=model_trainer_config)\n",
-    "    model_trainer_config.train()\n",
+    "    model_trainer_config_obj = config.get_model_trainer_config()  # config spécifique du trainer\n",
+    "    all_params = config.get_all_model_params()  # méthode à créer ou utiliser pour récupérer les params du YAML\n",
+    "\n",
+    "    model_trainer = ModelTrainer(\n",
+    "        config=model_trainer_config_obj,\n",
+    "        all_params=all_params\n",
+    "    )\n",
+    "    model_trainer.train()\n",
     "except Exception as e:\n",
-    "    raise e"
+    "    raise e\n"
    ]
   },
   {
