--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "3bf6276b",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "a565da06",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "6bb99877",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
     "    \n",
     "    def get_model_evaluation_config(self) -> ModelEvaluationConfig:\n",
     "        config = self.config.model_evaluation\n",
-    "        params = self.params.ElasticNet\n",
+    "        params = self.params.RandomForest\n",
     "        schema =  self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "55ba21f4",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "096732ff",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
     "                # There are other ways to use the Model Registry, which depends on the use case,\n",
     "                # please refer to the doc for more information:\n",
     "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
-    "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"ElasticnetModel\")\n",
+    "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"RandomForestModel\")\n",
     "            else:\n",
     "                mlflow.sklearn.log_model(model, \"model\")\n",
     "\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "1bd46926",
    "metadata": {},
    "outputs": [
@@ -250,21 +250,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-12 21:18:59,163: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-12 21:18:59,170: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-12 21:18:59,173: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-12 21:18:59,174: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-12 21:18:59,175: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2025-12-12 21:19:00,095: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
+      "[2025-12-20 13:38:47,844: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-20 13:38:47,844: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-20 13:38:47,854: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-20 13:38:47,856: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-20 13:38:47,860: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2025-12-20 13:38:50,566: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Registered model 'ElasticnetModel' already exists. Creating a new version of this model...\n",
-      "2025/12/12 21:19:07 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: ElasticnetModel, version 2\n",
-      "Created version '2' of model 'ElasticnetModel'.\n"
+      "c:\\Users\\User\\Desktop\\3-IDSD\\mlops\\MLOPS\\MlopsProject\\base\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
+      "Successfully registered model 'RandomForestModel'.\n",
+      "2025/12/20 13:57:55 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: RandomForestModel, version 1\n",
+      "Created version '1' of model 'RandomForestModel'.\n"
      ]
     }
    ],
