--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6eba6866",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a27ab1c6",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "'c:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject\\\\research'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,27 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d2d4f10d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
+    "os.chdir(\"C:/Users/User/Desktop/3-IDSD/mlops/MLOPS/MlopsProject\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "48b4adb1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
+       "'C:\\\\Users\\\\User\\\\Desktop\\\\3-IDSD\\\\mlops\\\\MLOPS\\\\MlopsProject'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "74944183",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "712b303d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "id": "3bf6276b",
    "metadata": {},
    "outputs": [],
@@ -94,12 +94,11 @@
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
-    "\n",
     "@dataclass(frozen=True)\n",
     "class ModelEvaluationConfig:\n",
     "    root_dir: Path\n",
     "    test_data_path: Path\n",
-    "    model_path: Path\n",
+    "    model_dir: Path              # ⬅️ dossier contenant plusieurs modèles\n",
     "    all_params: dict\n",
     "    metric_file_name: Path\n",
     "    target_column: str\n",
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "id": "a565da06",
    "metadata": {},
    "outputs": [],
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 71,
    "id": "6bb99877",
    "metadata": {},
    "outputs": [],
@@ -140,28 +139,28 @@
     "    \n",
     "    def get_model_evaluation_config(self) -> ModelEvaluationConfig:\n",
     "        config = self.config.model_evaluation\n",
-    "        params = self.params.RandomForest\n",
-    "        schema =  self.schema.TARGET_COLUMN\n",
+    "        params = self.params              # ✅ TOUS les paramètres\n",
+    "        schema = self.schema.TARGET_COLUMN\n",
     "\n",
     "        create_directories([config.root_dir])\n",
     "\n",
     "        model_evaluation_config = ModelEvaluationConfig(\n",
     "            root_dir=config.root_dir,\n",
     "            test_data_path=config.test_data_path,\n",
-    "            model_path = config.model_path,\n",
-    "            all_params=params,\n",
-    "            metric_file_name = config.metric_file_name,\n",
-    "            target_column = schema.name,\n",
+    "            model_dir=config.model_dir,     # ✅ dossier des modèles\n",
+    "            all_params=params,              # ✅ dict complet\n",
+    "            metric_file_name=config.metric_file_name,\n",
+    "            target_column=schema.name,\n",
     "            mlflow_uri=\"https://dagshub.com/hannamhiri/MlopsProject.mlflow\",\n",
-    "           \n",
     "        )\n",
     "\n",
-    "        return model_evaluation_config\n"
+    "        return model_evaluation_config\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 72,
    "id": "55ba21f4",
    "metadata": {},
    "outputs": [],
@@ -173,12 +172,13 @@
     "import mlflow\n",
     "import mlflow.sklearn\n",
     "import numpy as np\n",
-    "import joblib"
+    "import joblib\n",
+    "from mlProject import logger\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "id": "096732ff",
    "metadata": {},
    "outputs": [],
@@ -187,62 +187,67 @@
     "    def __init__(self, config: ModelEvaluationConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    \n",
-    "    def eval_metrics(self,actual, pred):\n",
+    "    def eval_metrics(self, actual, pred):\n",
     "        rmse = np.sqrt(mean_squared_error(actual, pred))\n",
     "        mae = mean_absolute_error(actual, pred)\n",
     "        r2 = r2_score(actual, pred)\n",
     "        return rmse, mae, r2\n",
-    "    \n",
-    "\n",
     "\n",
     "    def log_into_mlflow(self):\n",
     "\n",
     "        test_data = pd.read_csv(self.config.test_data_path)\n",
-    "        model = joblib.load(self.config.model_path)\n",
-    "\n",
     "        test_x = test_data.drop([self.config.target_column], axis=1)\n",
-    "        test_y = test_data[[self.config.target_column]]\n",
-    "\n",
+    "        test_y = test_data[self.config.target_column]\n",
     "\n",
     "        mlflow.set_registry_uri(self.config.mlflow_uri)\n",
     "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
     "\n",
+    "        # 🔁 Boucle sur tous les modèles sauvegardés\n",
+    "        for model_file in os.listdir(self.config.model_dir):\n",
     "\n",
-    "        with mlflow.start_run():\n",
+    "            if not model_file.endswith(\".pkl\"):\n",
+    "                continue\n",
     "\n",
-    "            predicted_qualities = model.predict(test_x)\n",
+    "            model_name = model_file.replace(\".pkl\", \"\")\n",
+    "            model_path = os.path.join(self.config.model_dir, model_file)\n",
     "\n",
-    "            (rmse, mae, r2) = self.eval_metrics(test_y, predicted_qualities)\n",
-    "            \n",
-    "            # Saving metrics as local\n",
-    "            scores = {\"rmse\": rmse, \"mae\": mae, \"r2\": r2}\n",
-    "            save_json(path=Path(self.config.metric_file_name), data=scores)\n",
+    "            logger.info(f\"Evaluating model: {model_name}\")\n",
     "\n",
-    "            mlflow.log_params(self.config.all_params)\n",
+    "            model = joblib.load(model_path)\n",
     "\n",
-    "            mlflow.log_metric(\"rmse\", rmse)\n",
-    "            mlflow.log_metric(\"r2\", r2)\n",
-    "            mlflow.log_metric(\"mae\", mae)\n",
+    "            with mlflow.start_run(run_name=model_name):\n",
     "\n",
+    "                predictions = model.predict(test_x)\n",
+    "                rmse, mae, r2 = self.eval_metrics(test_y, predictions)\n",
     "\n",
-    "            # Model registry does not work with file store\n",
-    "            if tracking_url_type_store != \"file\":\n",
+    "                scores = {\"rmse\": rmse, \"mae\": mae, \"r2\": r2}\n",
     "\n",
-    "                # Register the model\n",
-    "                # There are other ways to use the Model Registry, which depends on the use case,\n",
-    "                # please refer to the doc for more information:\n",
-    "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
-    "                mlflow.sklearn.log_model(model, \"model\", registered_model_name=\"RandomForestModel\")\n",
-    "            else:\n",
-    "                mlflow.sklearn.log_model(model, \"model\")\n",
+    "                save_json(\n",
+    "                    path=Path(os.path.join(self.config.root_dir, f\"{model_name}_metrics.json\")),\n",
+    "                    data=scores\n",
+    "                )\n",
     "\n",
-    "    \n"
+    "                # 🔹 Log params DU modèle\n",
+    "                if model_name in self.config.all_params:\n",
+    "                    mlflow.log_params(self.config.all_params[model_name])\n",
+    "\n",
+    "                mlflow.log_metric(\"rmse\", rmse)\n",
+    "                mlflow.log_metric(\"mae\", mae)\n",
+    "                mlflow.log_metric(\"r2\", r2)\n",
+    "\n",
+    "                if tracking_url_type_store != \"file\":\n",
+    "                    mlflow.sklearn.log_model(\n",
+    "                        model,\n",
+    "                        \"model\",\n",
+    "                        registered_model_name=f\"{model_name}Model\"\n",
+    "                    )\n",
+    "                else:\n",
+    "                    mlflow.sklearn.log_model(model, \"model\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "1bd46926",
    "metadata": {},
    "outputs": [
@@ -250,12 +255,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-12-20 13:38:47,844: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-12-20 13:38:47,844: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-12-20 13:38:47,854: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2025-12-20 13:38:47,856: INFO: common: created directory at: artifacts]\n",
-      "[2025-12-20 13:38:47,860: INFO: common: created directory at: artifacts/model_evaluation]\n",
-      "[2025-12-20 13:38:50,566: INFO: common: json file saved at: artifacts\\model_evaluation\\metrics.json]\n"
+      "[2025-12-20 21:28:07,682: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-12-20 21:28:07,684: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-12-20 21:28:07,685: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2025-12-20 21:28:07,686: INFO: common: created directory at: artifacts]\n",
+      "[2025-12-20 21:28:07,687: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2025-12-20 21:28:07,823: INFO: 3998395040: Evaluating model: CatBoost]\n",
+      "[2025-12-20 21:28:08,844: INFO: common: json file saved at: artifacts\\model_evaluation\\CatBoost_metrics.json]\n"
      ]
     },
     {
@@ -264,9 +270,60 @@
      "text": [
       "c:\\Users\\User\\Desktop\\3-IDSD\\mlops\\MLOPS\\MlopsProject\\base\\Lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
       "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
-      "Successfully registered model 'RandomForestModel'.\n",
-      "2025/12/20 13:57:55 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: RandomForestModel, version 1\n",
-      "Created version '1' of model 'RandomForestModel'.\n"
+      "Successfully registered model 'CatBoostModel'.\n",
+      "2025/12/20 21:28:18 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: CatBoostModel, version 1\n",
+      "Created version '1' of model 'CatBoostModel'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-12-20 21:28:18,784: INFO: 3998395040: Evaluating model: LightGBM]\n",
+      "[2025-12-20 21:28:20,780: INFO: common: json file saved at: artifacts\\model_evaluation\\LightGBM_metrics.json]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'LightGBMModel'.\n",
+      "2025/12/20 21:28:29 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: LightGBMModel, version 1\n",
+      "Created version '1' of model 'LightGBMModel'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-12-20 21:28:29,849: INFO: 3998395040: Evaluating model: RandomForest]\n",
+      "[2025-12-20 21:28:30,984: INFO: common: json file saved at: artifacts\\model_evaluation\\RandomForest_metrics.json]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Registered model 'RandomForestModel' already exists. Creating a new version of this model...\n",
+      "2025/12/20 21:51:37 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: RandomForestModel, version 2\n",
+      "Created version '2' of model 'RandomForestModel'.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-12-20 21:51:38,008: INFO: 3998395040: Evaluating model: XGBoost]\n",
+      "[2025-12-20 21:51:40,030: INFO: common: json file saved at: artifacts\\model_evaluation\\XGBoost_metrics.json]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Successfully registered model 'XGBoostModel'.\n",
+      "2025/12/20 21:51:48 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: XGBoostModel, version 1\n",
+      "Created version '1' of model 'XGBoostModel'.\n"
      ]
     }
    ],
@@ -277,7 +334,8 @@
     "    model_evaluation_config = ModelEvaluation(config=model_evaluation_config)\n",
     "    model_evaluation_config.log_into_mlflow()\n",
     "except Exception as e:\n",
-    "    raise e"
+    "    raise e\n",
+    "\n"
    ]
   },
   {
