--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -340,8 +340,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f234218d",
    "metadata": {},
    "outputs": [
@@ -349,20 +348,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "hhi\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello\")"
+    "print(\"hhi\")"
    ]
-=======
-   "execution_count": null,
-   "id": "f234218d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 73c82e7694744578b42be96fa80f905c120950fd
   }
  ],
  "metadata": {
